--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
+archivesBaseName = 'jcoinche-client'
+version = ''
+
 jar {
     manifest {
         attributes 'Main-Class': 'Main'
