--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -13,8 +13,12 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
+archivesBaseName = 'jcoinche-server'
+version = ''
+
 jar {
     manifest {
         attributes 'Main-Class': 'Main'
     }
 }
+
