--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,8 @@ gradlew.bat
 *.war
 *.ear
 
+# Out Directory
+out/
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
