--- a/build.gradle
+++ b/build.gradle
@@ -20,12 +20,13 @@ allprojects {
     }
 }
 
-task copyJars(type: Copy, dependsOn: subprojects.jar) {
+/**
+ * Maybe change rule name
+ */
+task "package"(type: Copy, dependsOn: [subprojects.jar, build]) {
     from(subprojects.jar)
     into project.file('./out')
 }
-
-task copyFiles(dependsOn: [copyJars])
 
 clean {
     delete './out/'
