--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -2,14 +2,24 @@ group 'jcoinche'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
-
-sourceCompatibility = 1.5
+apply plugin: 'idea'
 
 repositories {
-    mavenCentral()
+}
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.0'
+    }
 }
 
 dependencies {
+    compile 'com.google.protobuf:protobuf-java:3.0.0'
+    compile group: 'io.netty', name: 'netty-transport', version: '4.1.6.Final'
+    compile group: 'io.netty', name: 'netty-handler', version: '4.1.6.Final'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
