--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -2,6 +2,9 @@ group 'jcoinche'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+
+mainClassName = "Main"
 
 repositories {
     mavenCentral()
