--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -44,12 +44,13 @@ jar {
     }
     manifest {
         attributes 'Main-Class': 'Main',
-                'Class-path': 'deps/netty-buffer-4.1.6.Final.jar' +
+                'Class-path': 'deps/netty-buffer-4.1.6.Final.jar ' +
                         'deps/netty-codec-4.1.6.Final.jar ' +
                         'deps/netty-common-4.1.6.Final.jar ' +
                         'deps/netty-handler-4.1.6.Final.jar ' +
                         'deps/netty-resolver-4.1.6.Final.jar ' +
-                        'deps/netty-transport-4.1.6.Final.jar'
+                        'deps/netty-transport-4.1.6.Final.jar ' +
+                        'deps/protobuf-java-3.0.0.jar '
     }
 }
 
