Adding CardGenerator Tests

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'org.mockito', name : 'mockito-core', version: '1.10.19'
 }
 
 allprojects {
@@ -16,6 +17,11 @@ allprojects {
     repositories {
         mavenCentral()
     }
+}
+
+test {
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
 }
 
 /**
