--- a/Client/build.gradle
+++ b/Client/build.gradle
@@ -18,7 +18,8 @@ project.dependencies {
     compile 'com.google.protobuf:protobuf-java:3.0.0'
     compile group: 'io.netty', name: 'netty-transport', version: '4.1.6.Final'
     compile group: 'io.netty', name: 'netty-handler', version: '4.1.6.Final'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.mockito', name : 'mockito-core', version: '1.10.19'
 }
 
 archivesBaseName = 'jcoinche-client'
@@ -30,6 +31,11 @@ task "copyDependenciesToTarget"(type: Copy) {
 }
 
 jar.dependsOn(copyDependenciesToTarget)
+
+test {
+    testLogging.showStandardStreams = true
+    testLogging.exceptionFormat = 'full'
+}
 
 jar {
     into('lib') {
