adding test and jacoco to dep

--- a/Server/build.gradle
+++ b/Server/build.gradle
@@ -5,13 +5,23 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: "jacoco"
 
 buildscript {
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.google.protobuf:protobuf-gradle-plugin:0.8.0'
+    }
+}
+
+test {
+    jacoco {
+        append = false
+        destinationFile = file("$buildDir/jacoco/jacocoTest.exec")
+        classDumpFile = file("$buildDir/jacoco/classpathdumps")
     }
 }
 
@@ -22,6 +32,7 @@ project.dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'org.mockito', name : 'mockito-core', version: '1.10.19'
 }
+
 
 archivesBaseName = 'jcoinche-server'
 version = ''
